--- a/css/style.css
+++ b/css/style.css
@@ -371,3 +371,9 @@
         margin-left: -6.5%;
     }
 }
+
+@media screen and (max-width: 533px){
+    #search-input::-webkit-input-placeholder{
+        font-size: 12px;
+    }
+}
